# DimensionalAnalysis

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: dimensionsTypes.hpp.913F1E5889B3A65E.idx  literals.cpp.E8B24E3A67981B5C.idx  quantity.hpp.8F828BF40779AC16.idx
src/: dimensionsTypes.hpp  quantity.hpp
tests/: literals.cpp
